--- a/src/app/components/document-table/document-table.component.html
+++ b/src/app/components/document-table/document-table.component.html
@@ -1,1 +1,40 @@
-<p>document-table works!</p>
+<!-- este componente se encarga de la logica para ordenar la tabla  -->
+<!-- Header de la tabla  -->
+<h1>My documents</h1>
+
+<!-- itera sobre la variable del componente 'documents' y lo envia al componente item para renderizarlo -->
+
+<!-- Se pasa el valor del arreglo "documents", y se configura para realizar una paginacion -->
+<p-table [value]="documents" [lazy]="true" (onLazyLoad)="loadDocuments($event)" [loading]="loading" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" 
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]">
+
+    <!-- Agregamos la cabecera de la tabla -->
+    <ng-template pTemplate="header">
+        <tr>
+            <th pSortableColumn="title">Title<p-sortIcon field="title"></p-sortIcon></th>
+            <th pSortableColumn="category">Category/App<p-sortIcon field="category"></p-sortIcon></th>
+            <th pSortableColumn="author">Author<p-sortIcon field="author"></p-sortIcon></th>
+            <th pSortableColumn="datecreated">Date created<p-sortIcon field="datecreated"></p-sortIcon></th>
+            <th pSortableColumn="languaje">Languaje<p-sortIcon field="datecreated"></p-sortIcon></th>
+            <th>Actions</th>
+        </tr>
+    </ng-template>
+
+    <!-- Mostramos la data en la tabla -->
+    <ng-template pTemplate="body" let-doc>
+        <tr>
+            <td>{{doc.title}}</td>
+            <td>{{doc.category}}</td>
+            <td>{{doc.author}}</td>
+            <td>{{doc.dateCreated}}</td>
+            <td>{{doc.languaje}}</td>
+            
+            <!-- Actions -->
+            <!-- Actions componente -->
+            <td class="p-d-flex p-jc-center p-ai-center">
+                <button pButton type="button" label="EDIT" class="p-m-1" routerLink="edit/{{doc.id}}" ></button>
+                <button pButton type="button" label="ACTIVATE" class="p-m-1" ></button>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
