Change Date formats to display data correctly

--- a/src/app/createeditor/createeditor.component.html
+++ b/src/app/createeditor/createeditor.component.html
@@ -1,40 +1,53 @@
 <!-- Center form -->
 <div class="p-d-flex p-justify-center p-ai-center" style="width: 100%; height: 100vh;">
     <!-- START card -->
-    <p-card header="Editor" subheader="" [style]="{width: 'auto'}" styleClass="p-shadow-24">
+    <p-card header="Add" subheader="" [style]="{width: 'auto'}" styleClass="p-shadow-24">
 
-        <!-- START Title -->
         <div class="p-field p-grid">
+            <!-- START Title -->
             <label for="title" class="p-col-fixed" style="width:100px">Title</label>
             <div class="p-col">
-                <input id="title" type="text" pInputText value="">  <!--disabled="{{loading}}"-->
+                <input id="title" type="text" pInputText value="{{title}}" [(ngModel)]="title" disabled="{{loading}}">  <!--disabled="{{loading}}"-->
             </div>
-        <!-- END Title -->
+            <!-- END Title -->
 
-        <!-- STAR Author -->
+            <!-- START Category -->
+            <label for="author" class="p-col-fixed" style="width:100px">Category</label>
+            <div class="p-col">
+                <input id="author" type="text" pInputText value="{{category}}" [(ngModel)]="category" disabled="{{loading}}"> <!--[(ngModel)]="author"-->
+            </div>
+            <!-- END Title -->
         </div>
         <div class="p-field p-grid">
+            <!-- STAR Author -->
             <label for="author" class="p-col-fixed" style="width:100px">Author</label>
             <div class="p-col">
-                <input id="author" type="text" pInputText value="" > <!--[(ngModel)]="author"-->
+                <input id="author" type="text" pInputText value="{{author}}" [(ngModel)]="author" disabled="{{loading}}"> <!--[(ngModel)]="author"-->
             </div>
-        </div>
-        <!-- END Author -->
+            <!-- END Author -->
 
-        <!-- STAR Languaje -->
+            <!-- STAR Date created -->
+            <label for="languaje" class="p-col-fixed" style="width:100px">Date created</label>
+            <div class="p-col">
+                <input id="languaje" type="text" pInputText value="{{languaje}}" [(ngModel)]="dateCreated" disabled="{{loading}}"> 
+            </div>
+            <!-- END Date created -->
+        </div>
+
         <div class="p-field p-grid">
+            <!-- STAR Languaje -->
             <label for="languaje" class="p-col-fixed" style="width:100px">Languaje</label>
             <div class="p-col">
-                <input id="languaje" type="text" pInputText value="" > 
+                <input id="languaje" type="text" pInputText value="{{languaje}}" [(ngModel)]="languaje" disabled="{{loading}}"> 
             </div>
+            <!-- END Languaje -->
         </div>
-        <!-- END Languaje -->
-    
+
         <!-- START Card footer -->
         <ng-template pTemplate="footer " class="footer" >
             <div style="width: 100%;" class="p-d-flex p-jc-between p-ai-center">
                 <p-button label="Back" icon="pi pi-caret-left"  routerLink="/" style="margin: 0 1em;"></p-button>
-                <p-button label="Save" icon="pi pi-check" style="margin: 0 1em;"></p-button>
+                <p-button label="Save" icon="pi pi-check-circle" style="margin: 0 1em;" (onClick)="addingDocument()"></p-button>
             </div>
         </ng-template>    
         <!-- END Card footer -->
